# chameleon

./: Cargo.toml  Notes.txt  README.md  template.c
include/: baby-chameleon.h  chameleon.h  peacock.h
src/: beautifier.rs  main.rs  parser.rs
src/components/: chameleon.rs  generator.rs  input.rs  mod.rs  mutator.rs
src/frontend/: lexer.rs  mod.rs  parser.rs  range.rs  source_view.rs
src/grammar/: builder.rs  cfg.rs  mod.rs  post.rs  syntax.rs  tokenizer.rs
src/templates/: root.c
src/translator/: baby.rs  full.rs  grammar.rs  mod.rs  templates.rs
templates/: grammar.chm  head.c  header.h  mutations.c  numbersets.c  root.c
templates/baby/: generators.c  header.h  mutations.c  root.c
templates/full/: header.h  mutations.c  root.c
test-data/: baby-template.c  template.c
test-data/baby/: .gitignore  Makefile  bench.c
test-data/generator/: .gitignore  Makefile
test-data/grammars/: clean.chm  json.chm  json.json  left_recursion.chm  messy.chm  noentry.chm  works.chm
test-data/json/: Makefile  json.c  main.c
test-data/programs/: .gitignore  Makefile  bench.c  main.c
