[package]
name = "chameleon"
version = "2.0.0"
edition = "2024"

[profile.release]
lto = true
codegen-units = 1
panic = "abort"

[dependencies]
anyhow = "1.0"
thiserror = "2.0"
clap = { version = "4.5", features = ["derive"] }
mimalloc = "0.1"
petgraph = "0.8"
nohash = "0.2"
askama = "0.15"
libloading = "0.9"
serde = "1.0"
libafl = { version = "0.15.3", features = ["prelude"] }
libafl_bolts = "0.15.3"
